--- a/recent/chatBox.html
+++ b/recent/chatBox.html
@@ -122,4 +122,4 @@
         });
     </script>
 </head>
-<body contenteditable="true" onclick="cont()" onkeydown="paste()"></body></html>
+<body contenteditable="true" onclick="cont()" onkeydown="paste()" style="background-color: rgb(243,243,243);"></body></html>
