--- a/recent/chat.html
+++ b/recent/chat.html
@@ -126,14 +126,14 @@
 <div  ondrop="drop_handler(event);" ondragover="dragover_handler(event);"
       ondragleave="dragLeave(event)"
         style="width: 100%;height: 100%;display: flex;flex-direction: column;justify-content: flex-end;align-items: center">
-    <div class="title" >
+    <div class="title" style="background-color: rgb(245,245,245);">
         <span id="title" ></span><span style="color: #c0c0c0;margin: 0 10px;font-weight: 550;font-size: 0.9em" id='count'></span>
         <i class="material-icons" style="" onclick="showDetail()">more_horiz</i>
     </div>
     <div style="width: 100%;flex:1;display:flex;flex-direction: row;justify-content: flex-end;align-items: center;">
         <div style="flex:1;display: flex;height:100%;flex-direction: column;justify-content: flex-end;align-items: center">
             <div
-                    style="width: 100%;flex:1;overflow: hidden;overflow-y: auto;padding-top:10px;visibility: hidden"
+                    style="background-color: rgb(243,243,243);width: 100%;flex:1;overflow: hidden;overflow-y: auto;padding-top:10px;visibility: hidden"
                  id="records" onclick="recod()"
                     ondblclick="showBiggerImage() ">
 
