--- a/recent/recent.html
+++ b/recent/recent.html
@@ -34,8 +34,8 @@
 
         .left .title {
             background-color: #e0e0e0;
-            border-right: 1px solid #d0d0d0;
-            border-bottom: 1px solid #d0d0d0;
+            border-right: 1px solid rgb(238,238,238);
+            border-bottom: 1px solid rgb(238,238,238);
             height: 45px;
             line-height: 45px;
             font-size: 12pt;
@@ -77,7 +77,7 @@
             <img height="20" src="../images/Wifi-Error.png" width="20"/>&nbsp;&nbsp;<span
                 style="color: #966D3F;font-weight: bold;"> 网络连接已断开</span>
         </div>
-        <div id="recent" style="width:200px;flex:1;overflow: auto;border-right: 1px solid #d0d0d0;">
+        <div id="recent" style="width:200px;flex:1;overflow: auto;border-right: 1px solid rgb(229,229,229); ">
         </div>
     </div>
     <div style="flex:1;height:100%;display: flex">
@@ -127,8 +127,8 @@
 
         if (selected != chatId) {
             //event.target.style.backgroundColor = "#e0e0e0";
-            document.getElementById(i).style.backgroundColor = "#e0e0e0";
-            document.getElementById(chatId).style.backgroundColor = "#e0e0e0";
+            document.getElementById(i).style.backgroundColor = "rgb(214,214,214)";
+            document.getElementById(chatId).style.backgroundColor = "rgb(214,214,214)";
         }
     }
 
@@ -150,7 +150,7 @@
             document.getElementById(selected).style.backgroundColor = "rgb(251,251,251)";
         }
         selected = chatId
-        document.getElementById(chatId).style.backgroundColor = "#e0e0e0";
+        document.getElementById(chatId).style.backgroundColor = "rgb(214,214,214)";
     }
 
 
@@ -243,7 +243,7 @@
                     }
 
                     html += `<div id="${chatId}" `
-                    html += `style="background-color: rgb(251,251,251);width:100%;height:70px;cursor: pointer;padding-left: 5px;display:flex;flex-direction:row;justify-content: flex-start;align-items: center;" onmouseover="hover('${chatId}',${i},${isGroup})" `
+                    html += `style="border-bottom: 1px solid rgb(238,238,238);background-color: rgb(251,251,251);width:100%;height:70px;cursor: pointer;padding-left: 5px;display:flex;flex-direction:row;justify-content: flex-start;align-items: center;" onmouseover="hover('${chatId}',${i},${isGroup})" `
                     html += `onmouseout="leave('${chatId}',${i},${isGroup})" onclick="chat('${chatId}', ${isGroup})">  `
                     html += `<div id='${i}'onmouseover="hovers('${chatId}',${i})" onmouseout="leaves('${chatId}',${i})" onclick="DeleteChat('${chatId}','${isGroup}')"  style="color:rgb(188,188,188);width:10%;text-align: center; visibility: hidden; font-weight: bold;font-family: "Abadi MT Condensed Light"" >×&nbsp;</div>`
                     //
