--- a/index/main.html
+++ b/index/main.html
@@ -100,7 +100,12 @@
       </div>
 
       <div class="navigator">
-          <div style="flex:1;"></div>
+          <!--<div style="flex:1;"></div>-->
+          <div style="width:40px;height:80px;text-align: center;line-height: 80px;position: relative;margin-top: 55px">
+              <div  style='display:none;position:absolute;left:30px;top:10px;font-size: 9pt;border:1px solid red;width:10px;height:10px;border-radius: 10px;background-color: red;'></div>
+              <img src="../images/1024x1024.png"  style="width:40px;height:40px;border-radius:4px;"/>&nbsp;
+
+          </div>
           <div style="width:40px;height:80px;text-align: center;line-height: 80px;position: relative">
               <div id="notify-msg-num" style='display:none;position:absolute;left:30px;color:white;font-size: 9pt;border:1px solid red;min-width:20px;height:20px;text-align: center;line-height: 17px;border-radius: 10px;background-color: red;'>1</div>
               <i id="recent" class="material-icons" style="color: #f9e160;font-size: 32px;cursor: pointer;position: relative;" onmouseover="hoverNavigator('recent')" onmouseout="leaveNavigator('recent')" onclick="selectNavigator('recent')">
