--- a/recent/chat.html
+++ b/recent/chat.html
@@ -131,7 +131,7 @@
         <i class="material-icons" style="" onclick="showDetail()">more_horiz</i>
     </div>
     <div style="width: 100%;flex:1;display:flex;flex-direction: row;justify-content: flex-end;align-items: center;">
-        <div style="flex:1;display: flex;height:100%;flex-direction: column;justify-content: flex-end;align-items: center">
+        <div style="background-color: rgb(243,243,243);flex:1;display: flex;height:100%;flex-direction: column;justify-content: flex-end;align-items: center">
             <div
                     style="width: 100%;flex:1;overflow: hidden;overflow-y: auto;padding-top:10px;visibility: hidden"
                  id="records" onclick="recod()"
