--- a/recent/chatBox.html
+++ b/recent/chatBox.html
@@ -31,6 +31,7 @@
         }
          function  cont() {
              parent.window.document.getElementById("face").style["display"]='none'
+             parent.window.document.getElementById("GroupMembers").style["display"]='none'
         }
         function paste() {
             if((event.metaKey||event.ctrlKey)&&event.keyCode==90){//undo
