--- a/recent/chat.html
+++ b/recent/chat.html
@@ -130,7 +130,10 @@
         <span id="title" ></span><span style="color: #c0c0c0;margin: 0 10px;font-weight: 550;font-size: 0.9em" id='count'></span>
         <i class="material-icons" style="" onclick="showDetail()">more_horiz</i>
     </div>
-    <div style="width: 100%;flex:1;display:flex;flex-direction: row;justify-content: flex-end;align-items: center;">
+    <div id ='GroupMembers' style="border: red 0px solid;width:150px;position: absolute;right: 0px;top: 45px;bottom:0px;background-color: rgb(255,255,255);display:none;flex:1;overflow: auto;">
+
+    </div>
+    <div style="border:0px red solid;width: 100%;flex:1;display:flex;flex-direction: row;justify-content: flex-end;align-items: center;">
         <div style="background-color: rgb(243,243,243);flex:1;display: flex;height:100%;flex-direction: column;justify-content: flex-end;align-items: center">
             <div
                     style="width: 100%;flex:1;overflow: hidden;overflow-y: auto;padding-top:10px;visibility: hidden"
@@ -191,6 +194,9 @@
     let name
     let relativeMsgId
     render()
+    function Group () {
+        alert(1)
+    }
     async function render () {
       init()
       let title
@@ -262,8 +268,27 @@
       return result
     }
 
-    function showDetail() {
-        document.location.href = "../contact/detail.html?"+otherId+"&"+name+"&"+isGroupChat;;
+   async function showDetail() {
+       if (isGroupChat) {
+           var static =document.getElementById("GroupMembers")
+           if (static.style.display ==="none" ) {
+               document.getElementById("GroupMembers").style.display = 'block'
+               var all = await ChatManager.asyGetGroupMembers(otherId)
+               var html = ''
+               var html = `<div style="border:0px red solid;flex:1;display: flex;width: 90%;margin-left: 10px;margin-top: 15px">群成员 (${all.length})</div>`
+               for (var i = 0; i < all.length; i++) {
+                   html += all[i].pic?`<div style="border:0px red solid;flex:1;display: flex;width: 90%;margin-left: 10px;margin-top: 15px;align-items: center;"><img  src=${all[i].pic} style="width:40px;height:40px;border-radius:0px;" /><div style="border: 0px red solid; width: 100px;overflow:hidden;text-overflow:ellipsis;white-space: nowrap;">&nbsp;${all[i].name}</div></div>`
+                       :`<div style="border:0px red solid;flex:1;display: flex;width: 90%;margin-left: 10px;margin-top: 15px;align-items: center;"><img  src="../images/1024x1024.png" style="width:40px;height:40px;border-radius:0px;" /><div style="border: 0px red solid; width: 100px;overflow:hidden;text-overflow:ellipsis;white-space: nowrap;">&nbsp;${all[i].name}</div></div>`
+               }
+           }else {
+               document.getElementById("GroupMembers").style.display = 'none'
+           }
+           document.getElementById("GroupMembers").innerHTML = html
+       } else {
+           document.location.href = "../contact/detail.html?"+otherId+"&"+name+"&"+isGroupChat;
+       }
+
+
     }
     function getIconNameByState(state) {
         if(state===0){
@@ -514,7 +539,9 @@
 
     }
     function recod(){
-        document.getElementById("face").style["display"]='none'
+        document.getElementById("face").style["display"]='none';
+        document.getElementById("GroupMembers").style.display = 'none';
+
     }
 
     function captureDesktop() {
