--- a/index/main.html
+++ b/index/main.html
@@ -163,6 +163,7 @@
 
     var notifyMsg = function () {
         ChatManager.asyGetAllMsgNotReadNum().then(function (num) {
+            alert(num)
             if(num>0){
                 document.getElementById("notify-msg-num").innerText = num;
                 document.getElementById("notify-msg-num").style.display="";
