消息界面，通讯录界面

--- a/index/main.html
+++ b/index/main.html
@@ -105,7 +105,7 @@
               <img id ='userimg'  style="width:40px;height:40px;border-radius:2px;"/>&nbsp;
           </div>
           <div style="width:40px;height:80px;text-align: center;line-height: 80px;position: relative">
-              <div id="notify-msg-num" style='display:none;position:absolute;left:30px;color:white;font-size: 9pt;border:1px solid red;min-width:20px;height:20px;text-align: center;line-height: 17px;border-radius: 10px;background-color: red;'>1</div>
+              <div id="notify-msg-num" style='display:none;position:absolute;left:30px;color:rgb(255,254,254);font-size: 9pt;border:1px solid red;min-width:20px;height:20px;text-align: center;line-height: 17px;border-radius: 10px;background-color: rgb(241,56,56);font-weight: bold'>1</div>
               <i id="recent" class="material-icons" style="color: #f9e160;font-size: 32px;cursor: pointer;position: relative;" onmouseover="hoverNavigator('recent')" onmouseout="leaveNavigator('recent')" onclick="selectNavigator('recent')">
                   chat_bubble_outline
               </i>
