--- a/contact/contact.html
+++ b/contact/contact.html
@@ -21,6 +21,7 @@
         .title {
             width: 100%;
             text-align: center;
+
         }
 
         .bottom .title {
@@ -34,7 +35,7 @@
         .left .title {
             background-color: #e0e0e0;
             border-right: 1px solid #d0d0d0;
-            border-bottom: 1px solid #d0d0d0;
+            border-bottom: 1px solid rgb(238,238,238);
             height: 45px;
             line-height: 45px;
             font-size: 12pt;
@@ -62,9 +63,9 @@
 </head>
 <body>
 <div style="height:100%;width:100%;display:flex;flex-direction: row;align-items: center">
-    <div style="height:100%;width:200px;display: flex;flex-direction: column;align-items: center;font-size: 10pt;overflow: hidden">
+    <div style="height:100%;width:250px;display: flex;flex-direction: column;align-items: center;font-size: 10pt;overflow: hidden">
 
-        <div class="title">
+        <div class="title" style="background-color: rgb(251,251,251)">
             通讯录
         </div>
         <!--<div class="toolbar" >-->
@@ -72,7 +73,7 @@
         <!--<i class="material-icons" style="font-size: 20px;float: right;cursor: pointer;margin-top: 4px;margin-right: -2px;color:#000" onclick="request()">compare_arrows</i>-->
         <!--<i class="material-icons" style="font-size: 20px;float:right;cursor: pointer;margin-top: 4px;margin-right: 10px;color:#000" onclick="addFriend()">add</i>-->
         <!--</div>-->
-        <div id="contact" style="width:200px;flex:1;overflow: auto;border-right: 1px solid #d0d0d0;">
+        <div id="contact" style="width:250px;flex:1;overflow: auto;border-right: 1px solid #d0d0d0;">
         </div>
     </div>
     <div style="flex:1;height:100%;background-color: white;display: flex">
@@ -103,7 +104,7 @@
     function select(id, name, pic) {
 
         if (selected) {
-            document.getElementById(selected).style.backgroundColor = "#f0f0f0";
+            document.getElementById(selected).style.backgroundColor = "rgb(251,251,251)";
         }
 
         document.getElementById(id).style.backgroundColor = "#e0e0e0";
@@ -126,9 +127,9 @@
             for (var i = 0; i < all.length; i++) {
                 var f = all[i];
                 if (f.id !== user.id) {
-                    html += `<div id='${f.id}' style = "width:100%;height:50px;cursor: pointer;padding-left: 5px;display:flex;flex-direction:row;justify-content: flex-start;align-items: center;" onmouseover="hover('${f.id}')" onmouseout ="leave('${f.id}')" onclick = "select('${f.id}','${f.name}','${f.pic}')">`
-                    html+= f.pic?`<img src="${f.pic}"  style="width:40px;height:40px;border-radius:50px;"/>&nbsp;&nbsp;<span style="font-weight: bold;margin-top: 0px">${f.name}</span>`:`<img src="../images/1024x1024.png"  style="width:40px;height:40px;border-radius:50px;"/>&nbsp;&nbsp;<span  style="font-weight: bold;margin-top: 0px">${f.name}</span>`
-                    html+= `</div>`
+                    html += `<div id='${f.id}' style = "background-color: rgb(251,251,251);border:0px solid red;width:100%;height:50px;cursor: pointer;padding-left: 5px;display:flex;flex-direction:row;justify-content: flex-start;align-items: center;" onmouseover="hover('${f.id}')" onmouseout ="leave('${f.id}')" onclick = "select('${f.id}','${f.name}','${f.pic}')"><div  style = "margin-left: 10px;border:0px solid red;width:80%;height:50px;cursor: pointer;padding-left: 5px;display:flex;flex-direction:row;justify-content: flex-start;align-items: center;" >`
+                    html+= f.pic?`<img src="${f.pic}"  style="width:40px;height:40px;border-radius:4px;"/>&nbsp;&nbsp;<span style="font-weight: bold;margin-top: 0px;overflow:hidden;text-overflow:ellipsis;white-space: nowrap;">${f.name}</span>`:`<img src="../images/1024x1024.png"  style="width:40px;height:40px;border-radius:4px;"/>&nbsp;&nbsp;<span  style="font-weight: bold;margin-top: 0px；overflow:hidden;text-overflow:ellipsis;white-space: nowrap;">${f.name}</span>`
+                    html+= `</div></div>`
                     // html += f.id;
                     // html += "' style=\"width:100%;height:50px;line-height: 50px;cursor: pointer;padding-left: 10px\" onmouseover=\"hover('";
                     // html += f.id;
